--- a/cucumber-core/.classpath
+++ b/cucumber-core/.classpath
@@ -2,13 +2,14 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="junit"/>
 	<classpathentry kind="lib" path="gherkin-5.1.0.jar"/>
 	<classpathentry kind="lib" path="cucumber-expressions-6.2.2.jar"/>
 	<classpathentry kind="lib" path="cucumber-html-0.2.7.jar"/>
 	<classpathentry kind="lib" path="cucumber-java-4.3.1.jar"/>
-	<classpathentry kind="lib" path="cucumber-junit-4.3.1.jar"/>
 	<classpathentry kind="lib" path="datatable-1.1.12.jar"/>
 	<classpathentry kind="lib" path="datatable-dependencies-1.1.12.jar"/>
 	<classpathentry kind="lib" path="tag-expressions-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
